# ansible-role-gocd

./: .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: main.yml
defaults/: main.yml
files/: agent.jks  go-agent  trust.jks
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  molecule.yml  playbook.yml  prepare.yml  requirements.yml
molecule/default/tests/: test_agent.py  test_server.py
molecule/github/: converge.yml
tasks/: go-agent.yml  go-server.yml  main.yml
templates/: docker-compose-goserver.yml.j2  go-agent  wrapper-properties.conf.j2
vars/: main.yml
