[tool.poetry]
name = "ls"
version = "0.1.0"
description = ""
authors = ["Andrés Sánchez García <Andrés Sánchez García>"]

[tool.poetry.dependencies]
python = "^3.9"
molecule = {extras = ["podman"], version = "^3.5.2"}
ansible = "^7.0.0"
ansible-lint = "^5.2.0"
flake8 = "^4.0.1"
yamllint = "^1.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
